# MyEbook

./: README.md  git-helper.md  index.html  latest.json  package.json  pnpm-lock.yaml  vite.config.js
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  fileutil.rs  lib.rs  main.rs  setup.rs
src/assets/styles/iconfont/: demo_index.html  iconfont.css  iconfont.js  iconfont.json
src/common/: createFile.js  funs.js  utils.js
src/components/: About.vue  EditBook.vue  EditView.vue  FileList.vue  Header.vue  HistoryView.vue  NewBook.vue  Popovers.vue  Setting.vue  TxtEditor.vue
src/libs/: parseBook.js
src/store/: appStore.js  bookStore.js
